<resources>
    <string name="app_name">Go Swap</string>
    <string name="bt_navi_home">Home</string>
    <string name="bt_navi_favo">Favorites</string>
    <string name="bt_navi_msg">Messages</string>
    <string name="bt_navi_sett">Delete Account</string>
    <string name="bt_navi_support">Support</string>
    <string name="bt_navi_swap">Swap your items</string>
    <string name="bt_navi_ads">My Ads</string>
    <string name="bt_navi_about">About</string>
    <string name="bt_navi_logout">Log out</string>
    <string name="drawer_open">is_opened</string>
    <string name="drawer_closed">is_closed</string>
    <string name="drawer_navi_login_msg">Login or SignUp</string>
    <string name="search_hint">Search for category</string>
    <string name="msg_no_connection">Check your connection</string>

    //////
    <string name="heading">Heading</string>
    <string name="subheading">SubHeading</string>
    <string name="more_button">MORE</string>
    <string name="card_numbering">1/5</string>
    <string name="view_more_key_header">eeddeedefef</string>
    <string name="view_more_key_items">eedfqwefdeedefef</string>
    /////

    <string name="base_url">http://192.168.43.254:5000/</string>

    <string name="facebook_app_id">2658875981005086</string>
    <string name="fb_login_protocol_scheme">fb2658875981005086</string>
    <string name="maps_api_key">AIzaSyB3zHanTpk-uzNStEMeC1Xqtqx85Xsebf4</string>


    <string name="title_activity_maps">Map</string>
    <string name="btn_register">REGISTER</string>
    <string name="tv_login_with">Login with</string>
    <string name="btn_login">LOGIN</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="msg_incorrect_pass">Incorrect password !</string>
    <string name="msg_mail_exist">This email not exist try sign up.</string>
    <string name="error_email_invalid">Invalid Email</string>
    <string name="error_pass_type">please type password</string>
    <string name="error_email_type">please type your email</string>
    <string name="msg_have_problem">Sorry we have a problem now try later :(</string>
    <string name="msg_fb_cant_login">sorry we can\'t login you using facebook :(</string>
    <string name="hint_name">Name</string>
    <string name="hint_confirm_pass">Confirm Password</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="error_name_type">please type your name</string>
    <string name="error_pass_length">password length</string>
    <string name="error_pass_confirm">please confirm your password</string>
    <string name="error_pass_matches">not Matches</string>
    <string name="error_phone_type">please type your phone</string>
    <string name="error_phone_length">number is very big</string>
    <string name="error_name_invalid">Invalid name</string>
    <string name="error_pass_invalid">Invalid password</string>
    <string name="error_phone_invalid">Invalid phone</string>
    <string name="error_pass_big">password is very big</string>
    <string name="error_image">Please select image !</string>
    <string name="msg_user_is_exist">this user is exist try forget password</string>
    <string name="msg_email_not_installed">There are no email clients installed.</string>
    <string name="btn_sawp">Swap your Item</string>
    <string name="msg_must_login">you must login first</string>
    <string name="btn_chat_now">CHAT NOW</string>
    <string name="warn_delete_account">You will lose all your Ads, Favorites and Messages after deleting your Account</string>
    <string name="btn_delete_account">Delete Account</string>
    <string name="warn_delete_confirm">Are you sure you want delete your account !?</string>
    <string name="msg_fav_removed">removed from your favorites</string>
    <string name="msg_fav_added">added to your favorites</string>
</resources>
